feat(core): make primary cover downloads task configurable
